src/app/header/nav/nav.component.css
.navigation {
    width: 100%;
    text-align: right;
    margin: 0px;
    position: relative;

}
a {
    width: auto;
    min-width: 30px;
    display: inline-block;
    margin: 1px 0px 0px 10px;
    padding: 1px 4px;
    /* border: 1px solid var(--black); */
    border-bottom: none;
    transform: skewY(-0.5deg);
}
.navLink {
    color: var(--black);
}
@media screen and (max-width: 1200px){
    .navLink {
        margin-bottom: -4px;
    }
}
.navLink:hover {
    background: var(--black);
    color: var(--white);
}
.active {
    background: var(--black);
    color: var(--white);
}

